      wrap-and-sort!)
  * Parse foreign architecture (package:any) relationships and also other
    multi-arch related relationships (Closes: #670679)
  * Parse build-profiles syntax.

  [ John Wright ]
  * Fix a GPG validation bug.  With some trailing whitespace, the code
    could be tricked into validating a signature, but using the bogus
    data after the signed section (Closes: #695932).

 -- Stuart Prescott <stuart@debian.org>  Fri, 13 Jun 2014 00:27:59 +1000

python-debian (0.1.22) unstable; urgency=low

  [ John Wright ]
  * Acknowledge NMUs.  (Thanks for your work, Colin and Fathi!)
  * arfile.ArFile.extractfile: Return a matching member even if it is
    not the first one in the archive.  Thanks to Mika Eloranta for the
    report and patch. (Closes: #689313)
  * deb822.Deb822.iter_paragraphs: Actually work with string input.
    Thanks to Stefano Rivera for the patch. (Closes: #647455)

  [ Stuart Prescott ]
  * Add myself to Uploaders.
  * Change Vcs-* URLs to canonical locations.
  * Switch build system to short form dh and pybuild.
  * Use nose to run test suite.
  * Add autopkgtest test suite.

  [ John Wright ]
  * python_support: Avoid hashlib dependency, using the built-in _sha or
    _sha1 module (depending on Python version) instead.  That way we
    don't link in OpenSSL, which has an incompatible license.
    (Closes: 747031)

 -- John Wright <jsw@debian.org>  Wed, 11 Jun 2014 02:25:21 -0700

python-debian (0.1.21+nmu3) unstable; urgency=medium

  * Non-maintainer upload.
  * Add support for xz-compressed packages. (Closes: #506861)
  * Byte-compile python modules for python3-debian. (Closes: #709935)

 -- Fathi Boudra <fabo@debian.org>  Tue, 29 Apr 2014 20:32:47 +0300

python-debian (0.1.21+nmu2) unstable; urgency=low

  * Non-maintainer upload.
  * In Python 2, restore Deb822Dict.has_key method for compatibility.
    (Closes: #686731)

 -- Colin Watson <cjwatson@debian.org>  Wed, 05 Sep 2012 11:28:58 +0100
