@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9), dh-python, python-all (>= 2.6.6-3~), python3-al
 Standards-Version: 3.9.5
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-python-debian/python-debian.git
 Vcs-Git: git://anonscm.debian.org/pkg-python-debian/python-debian.git
-X-Python-Version: >= 2.5
+X-Python-Version: >= 2.6
 XS-Testsuite: autopkgtest
 
 Package: python-debian
